﻿[B]1.0.15[/B]
- Filemoon.sx linkek feloldása
[B]1.0.14[/B]
- Inputstream adaptive használata m3u8 linkek lejátszásakor
[B]1.0.13[/B]
- Megjelenés éve szerinti csoportosítás
[B]1.0.12[/B]
- Film hossz rossz megadásának kezelése
[B]1.0.12~beta[/B]
- Kodi 17 támogatása
[B]1.0.11[/B]
- feltotesek.xyz források támogatása
- feliratok kezelésének módosítása (csak az így jelölt filmek esetén próbál feliratot letölteni)
[B]1.0.10[/B]
- Film leírás nincs mindig töltve
[B]1.0.9[/B]
- Forrás változás követése felirat kinyerésekor
[B]1.0.8[/B]
- Ékezetes keresés javítása
- Felirat letöltésének kísérlete akkor is, ha nincs jelölve, hogy feliratos, de mxdconent található az url-ben
- Nexus kompatibilitás
[B]1.0.7[/B]
- Hiányzó release év kezelése
[B]1.0.6[/B]
- Sorozat bugfix
[B]1.0.5[/B]
- BugFix
[B]1.0.4[/B]
- Keresés lapozásának (Következő oldal) javítása
[B]1.0.3[/B]
- Felirat kiírása utf-8-ként, feiratos megjelenítés módosítása
[B]1.0.2[/B]
- Sorozat felirat kezelése
[B]1.0.1[/B]
- Üres oldal kezelése
[B]1.0.0[/B]
- Első verzió