@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.filmpapa" name="FilmPapa HD" version="1.0.15" provider-name="vargalex">
+<addon id="plugin.video.filmpapa" name="FilmPapa HD" version="1.0.16" provider-name="vargalex">
 	<requires>
 		<import addon="script.module.resolveurl" version="5.1.00"/>
 		<import addon="script.module.inputstreamhelper" version="0.4.3"/>
@@ -12,7 +12,7 @@
 		<description lang="en">Nézd meg a filmeket, sorozatokat a https://plusz.club oldalról!</description>
 		<language>hu</language>
 		<platform>all</platform>
-		<news>- filemoon.sx linkek feloldása
+		<news>- Random (windows) user agent használata filemoon m3u8 lejátszás esetén
 		</news>
 		<assets>
 		  <icon>icon.png</icon>
